# ybb

./: .gitignore  .mise.toml  CLAUDE.md  PLAN.md  README.md  pyproject.toml
tests/: test_tree.py
ybb/: __main__.py  console.py  data_types.py  main.py  tree.py  yabai.py
ybb/commands/: close.py  resize.py  stack.py  switch_split.py  table.py
