[project]
name = "ybb"
version = "0.1.0"
description = "A CLI that extends yabai"
authors = [
    {name = "Boaz Yaniv", email = "boazyaniv@example.com"},
]
dependencies = [
    "typer>=0.16.0,<0.17.0",
    "rich>=14.0.0,<15.0.0",
    "dataclasses-json>=0.6.7,<0.7.0",
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
ybb = "ybb.__main__:main"

[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
